--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "tink-skeleton-angular",
-  "description": "Tink skeleton Angular directive",
+  "name": "awelzijn-history-back",
+  "description": "History back button",
   "version": "1.0.0",
   "repository": {
     "type": "git",
-    "url": "git@github.com:tinkkit/tink-skeleton-angular.git"
+    "url": "git@github.com:A-welzijn/history-back.git"
   },
   "dependencies": {
     "bower": "^1.3.12",
